feat: add static add urls add .vscode

--- a/src/core/templates/core/index.html
+++ b/src/core/templates/core/index.html
@@ -1,17 +1,1 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>prueba</title>
-</head>
-<body>
-    <h1>django</h1>
-    <ul>
-        <li>apenas estas empezando</li>
-        <li>es dificil pero se puede</li>
-        <li>va a quedar re bien</li>
-    </ul>
-    <footer>hecho en el año {{año}} </footer>
-</body>
-</html>
+{% extends 'base.html' %}
