feat: add 3 models

--- a/src/core/templates/core/base.html
+++ b/src/core/templates/core/base.html
@@ -14,14 +14,17 @@
         <h1>Restaurante de Betty</h1>
     </header>
     {% endblock header %}
+    {% block content %}
+    {% endblock content %}
     {% block footer %}
     <footer>
         <p>Libre de Copyrigt</p>
-        <table>
-            <ul>
-                
-            </ul>
-        </table>
+        <ul>
+            <h4>Cosas a tener en cuenta</h4>
+            <li>Pagina en Desarrolo</li>
+            <li>No Enviar Spam</li>
+            <li>No Enviar Informacion Personal</li>
+        </ul>
     </footer>
     {% endblock footer %}
 </body>
