--- a/src/core/static/style.css
+++ b/src/core/static/style.css
@@ -4,7 +4,8 @@ body {
 
 header {
     background-image: url(Clouds.jpg);
-    color: crimson;
+    background-size: cover;
+    color: gold;
     padding: 2rem 1rem;
 }
 
@@ -12,3 +13,15 @@ header h1 {
     font-size: 4rem;
     text-align: center;
 }
+
+footer {
+    font-size: 1rem;
+    background-color: darkslategray;
+    color: white;
+}
+
+footer p {
+    margin-top: 0.5rem;
+    float: right;
+}
+
