--- a/src/core/templates/core/index.html
+++ b/src/core/templates/core/index.html
@@ -1,1 +1,5 @@
-{% extends 'base.html' %}
+{% extends 'core/base.html' %}
+
+{% block content %}
+    <h1>Bienvenido al</h1>
+{% endblock content %}
