feat: add forms

--- a/src/core/templates/core/index.html
+++ b/src/core/templates/core/index.html
@@ -1,5 +1,7 @@
 {% extends 'core/base.html' %}
 
 {% block content %}
-    <h1>Bienvenido al</h1>
+    <a href="{% url 'core:pedido' %}"><button>Hacer Pedido</button></a>
+    <a href="{% url 'core:reservacion' %}"><button>Hacer Reservacion</button></a>
+    <a href="{% url 'core:sugerencia' %}"><button>Hacer Sugerencia</button></a>
 {% endblock content %}
