--- a/src/core/templates/core/base.html
+++ b/src/core/templates/core/base.html
@@ -22,12 +22,12 @@
     {% endblock content %}
     {% block footer %}
     <footer>
-        <p>Libre de Copyrigt</p>
+        <p>Libre de Copyright</p>
         <ul>
             <h4>Cosas a tener en cuenta</h4>
             <li>Pagina en Desarrolo</li>
             <li>No Enviar Spam</li>
-            <li>No Enviar Informacion Personal</li>
+            <li>Solo son Ejemplos</li>
         </ul>
     </footer>
     {% endblock footer %}
