--- a/src/core/templates/core/confirmacion.html
+++ b/src/core/templates/core/confirmacion.html
@@ -2,6 +2,6 @@
 {% load static %}
 
 {% block content %}
-    <h1 style="text-align: center;">✅La Informacion a sido Enviada con Exito✅</h1>
-    <img style="text-align: center;" src="{% static 'afirmativo.png' %}" alt="" height="300px">
+    <h1>La Informacion a sido Enviada con Exito</h1>
+    <img src="{% static 'afirmativo.png' %}" alt="" height="300px">
 {% endblock content %}
