--- a/src/core/templates/core/index.html
+++ b/src/core/templates/core/index.html
@@ -1,5 +1,10 @@
 {% extends 'core/base.html' %}
+{% load static %}
 
 {% block content %}
-
+    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <div>
+        <h1>Bienvenido al Restarurante de Betty</h1>
+        <h2>somos un restaurante con años de antiguedad y nos especializamos en preparar</h2>
+    </div>
 {% endblock content %}
