fix: some fixes

--- a/src/core/templates/core/confirmacion.html
+++ b/src/core/templates/core/confirmacion.html
@@ -3,5 +3,5 @@
 
 {% block content %}
     <h1>La Informacion a sido Enviada con Exito</h1>
-    <img src="{% static 'afirmativo.png' %}" alt="" height="300px">
+    <img src="{% static 'afirmativo.png' %}" height="300px">
 {% endblock content %}
