--- a/src/core/templates/core/index.html
+++ b/src/core/templates/core/index.html
@@ -1,16 +1,13 @@
 {% extends 'core/base.html' %}
-{% load static %}
 
 {% block content %}
-    <link rel="stylesheet" href="{% static 'style.css' %}">
     <div>
         <h1>Bienvenido al Restarurante de Betty</h1>
         <h2>Puedes ver Nuestro Menu en el Boton de abajo</h2>
         <a href="{% url 'core:menu' %}"><button>Menu</button></a>
-        <h2>Somos un Restaurante Con años de Antiguedad y nos Especializamos en Preparar</h2>
-    
-    {% for categoria in especialidades %}
-        <p>{{categoria}}</p>
-    {% endfor %}
+        <h2>Somos un Restaurante Con años de Antiguedad y nos Especializamos en</h2>
+        {% for categoria in especialidades %}
+            <p>{{categoria}}</p>
+        {% endfor %}
     </div>
 {% endblock content %}
