--- a/src/core/templates/core/base.html
+++ b/src/core/templates/core/base.html
@@ -32,6 +32,7 @@
     {% block footer %}
     <footer>
         <p>Libre de Copyright</p>
+        <p><a href="{% url 'core:about' %}">Acerca de Mi</a></p>
         <ul>
             <h4>Cosas a tener en cuenta</h4>
             <li>Pagina en Desarrolo</li>
