feat: add imgs for menu, about and update views

--- a/src/core/templates/core/base.html
+++ b/src/core/templates/core/base.html
@@ -32,6 +32,8 @@
     {% block footer %}
     <footer>
         <p>Libre de Copyright</p>
+        <p>Pagina Hecha en 22/12/2024</p>
+        <p>Hecha por</p>
         <p><a href="{% url 'core:about' %}">Acerca de Mi</a></p>
         <ul>
             <h4>Cosas a tener en cuenta</h4>
