--- a/src/core/templates/core/about.html
+++ b/src/core/templates/core/about.html
@@ -7,6 +7,7 @@
     <img src="{% static 'perfil.jpg' %}" height="300px">
     <p>Mi Nombre es Raul</p>
     <p>Soy un Estudiante de CoderHouse</p>
-    <p>Esta Pagina Esta en Desarrollo</p>
-    <p>pero es un buen ejemplo de practicas de html, css ,python y django</p>
+    <p>Esta Pagina Esta en Desarrollo Es la Pagina de un Restaurante para Comprar y Hacer Recervaciones</p>
+    <p>Puse la Opcion de dar Sugerencias y Solo los Registrados Pueden Editar el Menu</p>
+    <p>Es Solo una Pagina de Prueba Pero Planeo Mejorarla</p>
 {% endblock content %}
