--- a/src/core/templates/core/menu_list.html
+++ b/src/core/templates/core/menu_list.html
@@ -5,19 +5,25 @@
     <h2>Estas son Todas las Comidas y Bebidas que Tenemos por el Momento</h2>
     <form method="get">
         <input type="text" name="busqueda" placeholder="Buscar Platillo">
+        <button type="submit">Buscar</button>
     </form>
     <br>
     <table>
         <thead>
             <tr>
-                <th>Platillo</th>
-                <th>Opciones para Editar</th>
+                <th>Platillos</th>
+                {% if user.is_authenticated %}
+                    <a href="{% url 'core:agregar_platillo' %}">
+                        <button>Añadir un Nuevo Platillo</button></a>
+                    <th>Opciones para Editar</th>
+                {% endif %}
             </tr>
         </thead>
         <tbody>
             {% for menu in object_list %}
                 <tr>
                     <td>{{ menu.platillo }}</td>
+                {% if user.is_authenticated %}
                     <td>
                         <a href="{% url 'core:menu_completo' menu.id %}">
                             <button>Ver a detalle</button></a>
@@ -26,6 +32,7 @@
                         <a href="{% url 'core:eliminar_platillo' menu.id %}">
                             <button>Eliminar</button></a>
                     </td>
+                {% endif %}
                 </tr>
             {% empty %}
                 <tr>
@@ -34,7 +41,4 @@
             {% endfor %}
         </tbody>
     </table>
-    <br>
-    <a href="{% url 'core:agregar_platillo' %}">
-        <button>Añadir un Nuevo Platillo</button></a>
 {% endblock content %}
