--- a/src/core/templates/core/menu_list.html
+++ b/src/core/templates/core/menu_list.html
@@ -12,6 +12,7 @@
         <thead>
             <tr>
                 <th>Platillos</th>
+                <th>Precios</th>
                 {% if user.is_authenticated %}
                     <a href="{% url 'core:agregar_platillo' %}">
                         <button>Añadir un Nuevo Platillo</button></a>
@@ -23,6 +24,7 @@
             {% for menu in object_list %}
                 <tr>
                     <td>{{ menu.platillo }}</td>
+                    <td>{{ menu.precio }}</td>
                 {% if user.is_authenticated %}
                     <td>
                         <a href="{% url 'core:menu_completo' menu.id %}">
