style(menu): add new menu style, better footer, compatibility with phones

--- a/src/core/templates/core/base.html
+++ b/src/core/templates/core/base.html
@@ -32,17 +32,9 @@
     {% endblock content %}
     {% block footer %}
     <footer>
-        <ul id="datos">
-            <li>Libre de Copyright</p>
-            <li>Pagina Hecha en 22/12/2024</p>
-            <li>Hecha por <a href="{% url 'core:about' %}">Acerca de Mi</a></p>
-        </ul>
-        <ul>
-            <h4>Cosas a tener en cuenta</h4>
-            <li>Pagina en Desarrolo</li>
-            <li>No Enviar Spam</li>
-            <li>Solo son Ejemplos</li>
-        </ul>
+        <p>@copyright</p>
+        <p>Telefono: 315 xxx xxx</p>
+        <p>whassap +57 315 xxx xxx</p>
     </footer>
     {% endblock footer %}
 </body>
