--- a/src/core/static/style.css
+++ b/src/core/static/style.css
@@ -1,6 +1,8 @@
 body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-align: center;
+    background-color: seashell;
+    margin: 0px;
 }
 
 button {
@@ -9,47 +11,49 @@ button {
     cursor: pointer;
     padding: 10px 30px;
     border-radius: 28px;
-    background-color: aqua;
-    color: black;
+    background-color: navy;
+    color: white;
 }
 
 button:hover {
-    background-color: darkblue;
-    color: white;
+    background-color: yellow;
+    color: black;
 }
 
 header {
     background-image: url(mesa.webp);
     background-size: cover;
-    color: gold;
+    color: orange;
     padding: 2rem 1rem;
 }
 
 header h1 {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     cursor: default;
     font-size: 4rem;
 }
 
+hr {
+    margin: 12px;
+    margin-right: 0px;
+    margin-left: 0px;
+    border-style: groove;
+    border-color: darkred;
+    border-width: 2px;
+}
+
 footer {
-    margin-top: 20px;
+    margin-top: 30px;
     height: 175px;
     font-size: 20px;
     background-color: darkslategray;
     color: white;
+    display: grid;
+
 }
 
 footer p {
-    float: left;
-    text-align: right;
-    margin-top: 75px;
-    margin-left: 1rem;
-}
-
-footer ul {
-    margin-top: 0px;
-    margin-right: 10px;
-    float: right;
-    list-style: none;
+    height: 10px;
 }
 
 form input {
@@ -96,8 +100,23 @@ table td {
     font-size: 1.5rem;
 }
 
-#datos {
-    float: left;
-    margin-top: 47px;
-    list-style: none;
+.menu {
+    background-color: burlywood;
+    border: 4px;
+    border-color: crimson;
+    border-style: groove;
+}
+
+@media (max-width: 450px) {
+    header {
+        background-image: url(mesa.webp);
+        background-size: cover;
+        color: orange;
+        padding: 2rem 1rem;
+        height: 500px;
+    }
+    
+    header button {
+        margin-top: 16px;
+    }
 }
