--- a/src/core/static/style.css
+++ b/src/core/static/style.css
@@ -4,7 +4,9 @@ body {
     background-color: seashell;
     margin: 0px;
 }
-
+h1, h2 {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
 button {
     margin-right: 0px;
     font-size: large;
@@ -23,14 +25,7 @@ button:hover {
 header {
     background-image: url(mesa.webp);
     background-size: cover;
-    color: orange;
     padding: 2rem 1rem;
-}
-
-header h1 {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    cursor: default;
-    font-size: 4rem;
 }
 
 hr {
@@ -104,6 +99,7 @@ table td {
     background-color: burlywood;
     border: 4px;
     border-color: crimson;
+    border-radius: 14px;
     border-style: groove;
 }
 
@@ -111,12 +107,6 @@ table td {
     header {
         background-image: url(mesa.webp);
         background-size: cover;
-        color: orange;
-        padding: 2rem 1rem;
-        height: 500px;
-    }
-    
-    header button {
-        margin-top: 16px;
+        height: 370px;
     }
 }
