--- a/src/core/templates/core/menu_list.html
+++ b/src/core/templates/core/menu_list.html
@@ -4,6 +4,11 @@
     {{ cantidad }}
     <h1>Menu</h1>
     <br>
+    {% if user.is_authenticated %}
+        <a href="{% url 'core:agregar_platillo' %}">
+        <button>Añadir un Nuevo Platillo</button></a>
+        <br><br><br>
+    {% endif %}
     <div class="menu">
         {% for category,food in food_diches.items %}
             <h1>{{ category }}</h1>
