--- a/src/core/templates/core/base.html
+++ b/src/core/templates/core/base.html
@@ -5,30 +5,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Betty's Restaurant</title>
+    <title>Restaurante Doña Betty</title>
     <link rel="stylesheet" href="{% static 'style.css' %}">
     <link rel="icon" href="{% static 'favicon.ico' %}" />
 </head>
 <body>
     {% block header %}
-    <header>
-        <img src="{% static 'bettyrestaurant.png' %}" height="280px" width="410">
-        <a href="{% url 'core:index' %}"><button>Inicio</button></a>
-        {% if user.is_authenticated %}
-            <form action="{% url 'core:logout' %}" method="post">
-                {% csrf_token %}
-                <button type="submit">Cerrar Sesion</button>
-            </form>
-        {% endif %}
-    </header>
+        <header>
+            <div>
+                <a href="{% url 'core:index' %}"><img src="{% static 'bettyrestaurant.png' %}" style="height: 300px; width: 670px;"></a>
+            </div>
+            <a href="{% url 'core:index' %}"><button>Inicio</button></a>
+            {% if user.is_authenticated %}
+                <br><br>
+                <form action="{% url 'core:logout' %}" method="post">
+                    {% csrf_token %}
+                    <button type="submit">Cerrar Sesion</button>
+                </form>
+            {% endif %}
+        </header>
     {% endblock header %}
+
     {% block content %}
     {% endblock content %}
+
     {% block footer %}
-    <footer>
-        <p>Dirección: Autopista Medellin k.m 1.5 Parque Agroindustrial de Occidente P.H Bodega 1 local 1027</p>
-        <p>Telefono: 3006883349</p>
-    </footer>
+        <footer>
+            <p style="padding-top: 10px;">Dirección: Autopista Medellin k.m 1.5 Parque Agroindustrial de Occidente P.H Bodega 1 local 1027</p>
+            <p>Telefonos:</p>
+            <p>3006883349</p>
+            <p>3107803793</p>
+        </footer>
     {% endblock footer %}
 </body>
 </html>
